app-demo1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo1
  namespace: app-demo1
  labels:
    aadpodidbinding: podidentity 
spec:
  selector:
    matchLabels:
      app: app-demo1
      aadpodidbinding: podidentity
  minReadySeconds: 5
  replicas: 1
  revisionHistoryLimit: 10 
  strategy:
    rollingUpdate:
      maxSurge: "50%" # MaxSurge: use with RollingUpdate maximum pod when deploy
      maxUnavailable: "50%" # MaxUnavailable: use with RollingUpdate maximum pod status unavailable when update.
    type: RollingUpdate     
  template:
    metadata:
      labels:
        app: app-demo1
        aadpodidbinding: podidentity 
    spec:
      containers:
      - name: app-demo1
        image: tonykien2012/cicd-demoapp:python-app-1.0
        imagePullPolicy: Always #IfNotPresent
        resources:
          #requests:
          #  cpu: "100m"
          #  memory: "256Mi"
          #limits:
          #  cpu: "500m"
          #  memory: "2Gi"
        ports:
        - name: http
          containerPort: 5000
