app-demo1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-demo1-svc
  namespace: app-demo1
spec:
  selector:
    app: app-demo1
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
