app-demo1/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-demo-ingress
  namespace: app-demo1
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"    
spec:
  tls:
  - hosts:
    - app-demo1.kienle.xyz
    secretName: app-demo1-tls
  rules:
    - host: app-demo1.kienle.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-demo1-svc
                port:
                  number: 5000
